adding order and POD view